# mrs_uav_testing

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  control_test.xml  package.xml  plugins.xml
.ci/: ci_before_install.sh  deploy_key_github.enc
.github/workflows/: rostest.yml
cfg/: circle_flier.cfg
config/: circle_flier.yaml  control_test.yaml  control_test_gps.yaml  control_test_optic_flow.yaml  control_test_rostest.yaml  default_mrs_simulator_config.yaml  looping_test.yaml  path_random_flier.yaml  random_flier.yaml  random_flier_avoidance.yaml  trajectory_flier.yaml  trajectory_random_flier.yaml
include/mrs_uav_testing/: test_generic.h
launch/: aloam_pipeline_os1_16.launch  circle_flier.launch  control_test.launch  control_test_gps.launch  control_test_optic_flow.launch  gazebo_simulator.launch  looping_test.launch  mavros_interface.launch  mrs_simulator.launch  mrs_uav_system.launch  path_random_flier.launch  random_flier.launch  random_flier_avoidance.launch  rviz.launch  rviz_pig.launch  rviz_random_simulation.launch  rviz_uav10.launch  rviz_uav1_kalibr.launch  rviz_uav1_msckf.launch  rviz_uav1_vins.launch  rviz_uav3.launch  rviz_uav51.launch  safety_area.launch  simulation.launch  standalone_control_test.launch  takeoff.launch  takeoff_test.launch  tf_connector_avoidance.launch  tf_test.launch  trajectory_flier.launch  trajectory_generation_core.launch  trajectory_random_flier.launch  uav_renamed_rviz.launch
launch/nodeletless_debug/: mrs_constraint_manager.launch  mrs_control_manager.launch  mrs_gain_manager.launch  mrs_odometry.launch  mrs_uav_manager.launch
launch/rviz/: rviz.launch  rviz_avoidance.launch  rviz_msckf.launch  rviz_remote_log.launch  rviz_svo.launch  rviz_uav1_safety_area.launch  rviz_uav1_svo.launch  rviz_uav41.launch  rviz_uav42.launch  rviz_uav5.launch  rviz_uav64_grasping.launch  rviz_uav81.launch  rviz_video.launch  rviz_vins.launch  rviz_vio.launch
layouts/: layout-RVIZ_RQT_JUGGLER.json  remote_log.json
plot_juggler/: hector_test.xml  msckf.xml  odometry.xml  svo.xml  vins.xml
rviz/: aloam_test.rviz  avoidance_test.rviz  bumper_test.rviz  circle_flier.rviz  control_test.rviz  default_random_simulation.rviz  default_simulation.rviz  hector_test.rviz  msckf.rviz  odometry.rviz  pig.rviz  record_video.rviz  remote_log.rviz  safety_area_test.rviz  summer_school.rviz  svo.rviz  trajectory_generation.rviz  trajectory_generation_multi.rviz  uav1.rviz  uav10.rviz  uav1_kalibr.rviz  uav1_msckf.rviz  uav1_safety_area.rviz  uav1_svo.rviz  uav1_vins.rviz  uav3.rviz  uav41.rviz  uav42.rviz  uav5.rviz  uav51.rviz  uav64_grasping.rviz  uav81.rviz  vins.rviz  vio.rviz  vio_test.rviz
scripts/: change_uav.sh  change_uav_control.sh  monitor.sh  msckf.sh  random_simulation.sh  record_remote.sh  remote_log.sh  remote_rosbag.sh  rosbag_rviz.sh  ss.sh  svo.sh  uav_rename_rviz.sh  vins.sh
src/: circle_flier.cpp  control_test.cpp  looping_test.cpp  path_random_flier.cpp  random_flier.cpp  test_generic.cpp  tf_test.cpp  trajectory_flier.cpp  trajectory_random_flier.cpp
test/: CMakeLists.txt  all_tests.sh  control_test.cpp  control_test_rostest.launch  run_tests.sh  takeoff_test.cpp  takeoff_test.launch
test/custom_configs/: odometry.yaml
test/gazebo_takeoff/: CMakeLists.txt  gazebo_takeoff.test  test.cpp
test/goto/: CMakeLists.txt  goto.test  test.cpp
test/goto/config/: simulator.yaml
test/goto/launch/: mrs_uav_system.launch
test/goto_relative/: CMakeLists.txt  goto_relative.test  test.cpp
test/goto_relative/launch/: mrs_uav_system.launch
test/midair_activation/: CMakeLists.txt  midair_activation.test  test.cpp
test/midair_activation/launch/: mrs_uav_system.launch
test/takeoff/: CMakeLists.txt  takeoff.test  test.cpp
test/takeoff/config/: simulator.yaml
test/takeoff/launch/: mrs_uav_system.launch
tmux/collision_avoidance_test/: pos1.txt  pos2.txt  session.yml
tmux/control_test/: .tmuxinator.yml  session.yml
tmux/control_test_gps/: constraint_manager.yaml  session.yml  uav_manager.yaml
tmux/control_test_gps/custom_configs/: control_manager.yaml
tmux/control_test_optic_flow/: layout.json  session.yml
tmux/nodeletless_debug/: nodeletless_debug_simulation.sh
tmux/safety_area_test/: session.yml  world.yaml
tmux/test_bumper/: session.yml
tmux/test_bumper/custom_configs/: control_manager.yaml
tmux/test_circle_flier/: layout.json  session.yml
tmux/test_circle_flier/custom_configs/: circle_flier.yaml  constraint_manager.yaml  control_manager.yaml  gain_manager.yaml
tmux/test_collision_avoidance/: layout.json  pos.yaml  pos3.csv  session.yml  world.yaml
tmux/test_collision_avoidance/custom_configs/: mpc_tracker.yaml  random_flier.yaml
tmux/test_control_aloam/: layout.json  session.yml
tmux/test_control_aloam/custom_configs/: odometry.yaml
tmux/test_control_gps/: init_pos.yaml  init_pose.txt  session.yml
tmux/test_control_gps/custom_configs/: constraint_manager.yaml  control_test.yaml  uav_manager.yaml
tmux/test_control_hector/: init_pos.yaml  init_pose.csv  layout.json  pos.csv  session.yml  session.yml.orig  world.yaml
tmux/test_control_hector/custom_configs/: constraint_manager.yaml  control_manager.yaml  control_test.yaml  odometry.yaml  uav_manager.yaml
tmux/test_control_optflow/: session.yml
tmux/test_control_optflow_flip/: session.yml
tmux/test_control_rtk/: session.yml
tmux/test_control_vio/: session.yml
tmux/test_flip_tracker/: session.yml
tmux/test_flip_tracker_multi/: init_pos.yaml  layout.json  session.yml  world.yaml
tmux/test_safety_area/: init_pos.yaml  layout.json  pos.csv  pos.txt  pos.yaml  session.yml  world.yaml
tmux/test_trajectory_generation/: session.yml
tmux/test_trajectory_generation_multi/: init_pos.yaml  layout.json  session.yml  world.yaml  world_uav1.yaml  world_uav10.yaml  world_uav11.yaml  world_uav12.yaml  world_uav2.yaml  world_uav3.yaml  world_uav4.yaml  world_uav5.yaml  world_uav6.yaml  world_uav7.yaml  world_uav8.yaml  world_uav9.yaml
worlds/: hector_test.world  safety_area.world  vio_test.world
(+28 files in other folders)
