<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_testing</name>
  <version>1.0.3</version>
  <description>The mrs_uav_testing package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>mrs_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
