<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_testing</name>
  <version>1.0.0</version>
  <description>The mrs_uav_testing package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>roscpp</depend>

  <test_depend>mrs_uav_gazebo_simulation</test_depend>

  <export>
  </export>

</package>
